feat: add auth and message sign
