# docs/swagger.json
@@ -607,7 +607,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "sortType",
+                        "description": "sortType: 1/-1",
                         "name": "sortType",
                         "in": "query"
                     }
@@ -690,7 +690,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "sortType",
+                        "description": "sortType: 1/-1",
                         "name": "sortType",
                         "in": "query"
                     }
@@ -716,6 +716,12 @@
                 ],
                 "summary": "Fetch tick info",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "net",
+                        "name": "net",
+                        "in": "query"
+                    },
                     {
                         "type": "string",
                         "description": "tick",
@@ -1023,6 +1029,9 @@
         "request.OrderBrc20UpdateReq": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
                 "net": {
                     "description": "livenet/signet/testnet",
                     "type": "string"
@@ -1218,6 +1227,10 @@
                     "type": "string"
                 },
                 "high": {
+                    "type": "string"
+                },
+                "icon": {
+                    "description": "icon",
                     "type": "string"
                 },
                 "last": {
